<resources>
    <string name="app_name">MedicationList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_display">Display</string>
    <string name="menu_insert">Insert</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="text_event_id">Event id: </string>
    <string name="hint_event_id">EventId</string>
    <string name="text_medication_name">Medication Name: </string>
    <string name="hint_medication_name">Medication Name</string>
    <string name="text_medication_type">Medication Type: </string>
    <string name="hint_medication_type">Medication Type</string>
    <string name="text_date">Date: </string>
    <string name="hint_date">Date</string>
</resources>
